--- a/index.html
+++ b/index.html
@@ -944,10 +944,10 @@
             <p><strong>Email:</strong> <a href="mailto:sadguruscienceclasses2002@gmail.com">sadguruscienceclasses2002@gmail.com</a></p>
             <p><strong>Address:</strong> Sadguru Science Classes, near St. Peter's High School, Manvelpada Road, Virar (E)</p>
             <div class="social-links">
-                <a href="[Your WhatsApp Community Link]" target="_blank" class="social-button whatsapp">WhatsApp</a>
-                <a href="[Your Instagram Link]" target="_blank" class="social-button instagram">Instagram</a>
+                <a href="https://chat.whatsapp.com/FdWT5sLILqFDVb8tKaZnzE" target="_blank" class="social-button whatsapp">WhatsApp</a>
+                <a href="https://www.instagram.com/sadguruacademy2025/" target="_blank" class="social-button instagram">Instagram</a> <br>
                 <a href="[Your Facebook Link]" target="_blank" class="social-button facebook">Facebook</a>
-                <a href="[Your YouTube Link]" target="_blank" class="social-button youtube">YouTube</a>
+                <a href="https://www.youtube.com/c/SadguruScienceClasses" target="_blank" class="social-button youtube">YouTube</a>
             </div>
         </div>
         <div class="map-container">
