--- a/index.html
+++ b/index.html
@@ -946,6 +946,8 @@
             <div class="social-links">
                 <a href="https://chat.whatsapp.com/FdWT5sLILqFDVb8tKaZnzE" target="_blank" class="social-button whatsapp">WhatsApp</a>
                 <a href="https://www.instagram.com/sadguruacademy2025/" target="_blank" class="social-button instagram">Instagram</a> <br>
+            </div>
+            <div class="social-links">
                 <a href="[Your Facebook Link]" target="_blank" class="social-button facebook">Facebook</a>
                 <a href="https://www.youtube.com/c/SadguruScienceClasses" target="_blank" class="social-button youtube">YouTube</a>
             </div>
